docs: vignette and readme cleanup

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,21 +35,15 @@ a `TunerMbo` class behaving like any other `Tuner` from the [mlr3tuning](https:/
 `mlr3mbo` uses sensible defaults for the `Surrogate`, `AcqFunction`, `AcqOptimizer`, and even the loop function.
 See `?mbo_defaults` for more details.
 
-## API
-
-## Robustness
-
 ## Simple Optimization Example
 
 Minimize `y = x^2` via sequential singlecriteria BO using a GP as surrogate and EI optimized via random search as aquisition function:
 
 ```{r, message = FALSE}
-set.seed(1)
 library(bbotk)
-library(mlr3)
 library(mlr3mbo)
-library(paradox)
 library(mlr3learners)
+set.seed(1)
 
 obfun = ObjectiveRFun$new(
   fun = function(xs) list(y1 = xs$x ^ 2),
@@ -86,6 +80,9 @@ optimizer$optimize(instance)
 Note that you can also use `bb_optimize` as a shorthand:
 
 ```{r, message = FALSE}
+library(bbotk)
+library(mlr3mbo)
+library(mlr3learners)
 set.seed(1)
 
 fun = function(xs) list(y1 = xs$x ^ 2)
@@ -115,11 +112,11 @@ result = bb_optimize(
 ## Simple Tuning Example Using Defaults
 
 ```{r, message = FALSE}
-set.seed(1)
 library(mlr3)
 library(mlr3learners)
 library(mlr3tuning)
 library(mlr3mbo)
+set.seed(1)
 
 task = tsk("pima")
 
