--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -9,7 +9,7 @@
 
 @article{bischl_2021,
   title   = {Hyperparameter Optimization: Foundations, Algorithms, Best Practices and Open Challenges},
-  url     = {http://arxiv.org/abs/2107.05847},
+  url     = {https://arxiv.org/abs/2107.05847},
   note    = {arXiv: 2107.05847},
   journal = {arXiv:2107.05847 [cs, stat]},
   author  = {Bischl, Bernd and Binder, Martin and Lang, Michel and Pielok, Tobias and Richter, Jakob and Coors, Stefan and Thomas, Janek and Ullmann, Theresa and Becker, Marc and Boulesteix, Anne-Laure and Deng, Difan and Lindauer, Marius},
